2002-08-07  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclCompile.h:
	* generic/tclObj.c: making tclCmdNameType static ([Bug 584567],
	Don Porter).
	
2002-08-07  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclObj.c (Tcl_NewObj): added conditional code for
	USE_THREAD_ALLOC; objects allocated through Tcl_NewObj() were
	otherwise being leaked. [Bug 587488] reported by Sven Sass.
	
2002-08-06  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclInt.decls:
	* unix/tclUnixThrd.c: Added stubs and implementations for
	non-threaded build for the tclUnixThrd.c procs TclpReaddir,
	TclpLocaltime, TclpGmtime and TclpInetNtoa.
	Fixes link errors in stubbed & threaded extensions that include
	tclUnixPort.h and use any of the procs readdir, localtime, 
	gmtime or inet_ntoa (e.g. TclX 8.4) [Bug 589526]
	* generic/tclIntPlatDecls.h:
	* generic/tclStubInit.c: Regen.

2002-08-05  Don Porter  <dgp@users.sourceforge.net>

	* library/tcltest/tcltest.tcl:	The setup and cleanup scripts are now
	* library/tcltest/pkgIndex.tcl:	skipped when a test is skipped, fixing
	* tests/tcltest.test:		[Bug 589859].  Test for bug added, and
	corrected tcltest package bumped to version 2.2.

	* generic/tcl.decls:	Restored Tcl_Concat to return (char *).  Like
	* generic/tclDecls.h:	Tcl_Merge, it transfers ownership of a dynamic
	* generic/tclUtil.c:	allocated string to the caller.

2002-08-04  Don Porter  <dgp@users.sourceforge.net>

	* doc/CmdCmplt.3:	Applied Patch 585105 to fully CONST-ify
	* doc/Concat.3:		all remaining public interfaces of Tcl.
	* doc/CrtCommand.3:	Notably, the parser no longer writes on 
	* doc/CrtSlave.3:	the string it is parsing, so it is no
	* doc/CrtTrace.3:	longer necessary for Tcl_Eval() to be
	* doc/Eval.3:		given a writable string.  Also, the
	* doc/ExprLong.3:	refactoring of the Tcl_*Var* routines
	* doc/LinkVar.3:	by Miguel Sofer is included, so that the
	* doc/ParseCmd.3:	"part1" argument for them no longer needs